Add todo list to github pages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Portfolio</title>
+  </head>
+  <body>
+    <h1>Rebecca's <em>Portfolio</em></h1>
+    <p>Welcome to my webpage!</p>
+
+    <p>Projects made during JavaScriptBridge:</p>
+    <ul>
+      <li>Javascript Snake game</li>
+      <li><a href="https://rfjackson11.github.io/AdvancedTodoList/">Advanced To Do List</li>
+    </ul>
+  </body>
+</html>
