Add the snake game and open source

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>Rebecca's <em>Portfolio</em></h1>
+    <h1>Rebecca's Portfolio</h1>
     <p>Welcome to my webpage!</p>
+
+    <p>OpenSource I have contributed to:</p>
+    <ul>
+      <li><a href="https://github.com/womenrising/womenrising/">WomenRising</a></li>
+    </ul>
 
     <p>Projects made during JavaScriptBridge:</p>
     <ul>
-      <li>Javascript Snake game</li>
-      <li><a href="https://rfjackson11.github.io/AdvancedTodoList/">Advanced To Do List</li>
+      <li><a href="https://rfjackson11.github.io/js-snake-game/">Javascript Snake game</a></li>
+      <li><a href="https://rfjackson11.github.io/AdvancedTodoList/">Advanced To Do List</a></li>
     </ul>
   </body>
 </html>
